--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,17 @@
-<h1>Instagram Clone</h1>
+<div class="posts-wrapper row">
+    <% @posts.each do |p| %>
+      <div class="post">
+        <div class="post-head">
+          <div class="name">
+            edwin
+          </div>
+        </div>
+        <div class="image center-block">
+          <%= link_to(image_tag( p.image.url(:medium), class: "img-responsive"), post_path(p) )%>
+        </div>
+        <p class="caption">
+          <%= p.caption %>
+        </p>
+      </div>
+    <% end %>
+</div>
