--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,5 @@
 <div class="posts-wrapper row">
     <% @posts.each do |p| %>
-      <div class="post">
-        <div class="post-head">
-          <div class="name">
-            edwin
-          </div>
-          <div class="settings">
-            <div class="btn-group" role="group">
-              <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
-              </button>
-              <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                <%= link_to 'Edit', edit_post_path(p), class: "dropdown-item" %>
-                <%= link_to 'Delete', post_path(p), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "dropdown-item" %>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="image center-block">
-          <%= link_to(image_tag( p.image.url(:medium), class: "img-responsive" ), post_path(p) )%>
-        </div>
-        <p class="caption">
-          <%= p.caption %>
-        </p>
-      </div>
+      <%= render 'post', p: p %>
     <% end %>
 </div>
