--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,27 +1,4 @@
 <div class="posts-wrapper row">
   <%= link_to 'Back', root_path %>
-  <div class="post">
-    <div class="post-head">
-      <div class="name">
-        edwin
-      </div>
-      <div class="settings">
-        <div class="btn-group" role="group">
-          <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
-          </button>
-          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <%= link_to 'Edit', edit_post_path(@post), class: "dropdown-item" %>
-            <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "dropdown-item" %>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="image center-block">
-      <%= image_tag @post.image.url(:medium), class: "img-responsive"%>
-    </div>
-    <p class="caption">
-      <%= @post.caption %>
-    </p>
-  </div>
+  <%= render 'post', p: @post %>
 </div>
