Add flash and error message to partials

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="posts-wrapper row">
     <% @posts.each do |p| %>
-      <%= render 'post', p: p %>
+      <%= render 'posts/post', p: p %>
     <% end %>
 </div>
