--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <%= render 'layouts/flash_message' %>
       <%= yield %>
     </div>
     <%= debug(params) if Rails.env.development? %>
