--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,19 +1,21 @@
 <div class="post">
   <div class="post-head">
     <div class="name">
-      edwin
+      <%= p.user.user_name %>
     </div>
-    <div class="settings">
-      <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <% if p.user.id === current_user.id %>
+      <div class="settings">
+        <div class="btn-group" role="group">
+          <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
-        </button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-          <%= link_to 'Edit', edit_post_path(p), class: "dropdown-item" %>
-          <%= link_to 'Delete', post_path(p), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "dropdown-item" %>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <%= link_to 'Edit', edit_post_path(p), class: "dropdown-item" %>
+            <%= link_to 'Delete', post_path(p), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "dropdown-item" %>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
   </div>
   <div class="image center-block">
     <%= link_to(image_tag( p.image.url(:medium), class: "img-responsive" ), post_path(p) )%>
