--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -43,7 +43,7 @@ body {
   font-size: 15px;
   line-height: 18px;
   .thumbnail {}
-  .name {
+  .username {
     display: inline-block;
   }
   .settings {
