Update post view and add comment and delete functionality

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <div class="post">
     <div class="post-head">
       <div class="thumb-img"></div>
-      <div class="username">
+      <div class="user-name">
         <%= p.user.user_name %>
       </div>
       <%= render 'posts/post_settings', p: p %>
@@ -12,7 +12,7 @@
     </div>
     <div class="post-bottom">
       <div class="caption">
-        <div class="username">
+        <div class="user-name">
           <%= p.user.user_name %>
         </div>
         <%= p.caption %>
