--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,6 +1,6 @@
 <% if p.comments %>
   <% p.comments.each do |comment| %>
-    <div class="comment">
+    <div id="comment">
       <div class="user-name">
         <%= comment.user.user_name %>
       </div>
@@ -8,7 +8,7 @@
         <%= comment.content %>
         <% if comment.user === current_user %>
           <%= link_to post_comment_path(p, comment), method: :delete, data: { confirm: "Are you sure?" } do %>
-            <%= fa_icon("times") %>
+            <%= fa_icon("times", class: "delete-comment") %>
           <% end %>
         <% end %>
       </div>
