--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
   <div class="comment-content">
     <%= comment.content %>
     <% if comment.user === current_user %>
-      <%= link_to post_comment_path(p, comment), method: :delete, data: { confirm: "Are you sure?" } do %>
+      <%= link_to post_comment_path(p, comment), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %>
         <%= fa_icon("times", class: "delete-comment") %>
       <% end %>
     <% end %>
