--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,10 @@
       <div class="user-name">
         <%= p.user.user_name %>
       </div>
-      <%= render 'posts/post_settings', p: p %>
+      <div class="time-ago">
+        <%= "#{time_ago_in_words(p.created_at)} ago" %>
+      </div>
+      <%#= render 'posts/post_settings', p: p %>
     </div>
     <div class="image center-block">
       <%= link_to(image_tag( p.image.url(:medium), class: "img-responsive" ), post_path(p) )%>
