--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,6 +19,15 @@ body {
   font-family: proxima-nova, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  height: 100%;
+}
+
+.container-fluid {
+  padding: 0;
+  height: 100%;
+}
+
 nav {
   background-color: #fff;
 }
@@ -134,14 +143,6 @@ nav {
   justify-content: center;
 }
 
-// .comment-form {
-//   .comment_content {
-//     width: 100%;
-//     border: none;
-//     outline: none;
-//   }
-// }
-
 .form-wrapper {
   width: 60%;
   margin: 20px auto;
@@ -149,4 +150,53 @@ nav {
   padding: 40px;
   border: 1px solid #eeefef;
   border-radius: 3px;
+}
+
+/* registration */
+
+.registration-bg {
+  min-height: 100%;
+  padding-top: 4em;
+  background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+}
+
+.container {
+  .row-one {
+    margin-top: 5%;
+  }
+}
+
+.log-in{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border: none;
+}
+
+.card {
+  border-radius: 1;
+}
+
+.card-header{
+  h1 {
+    text-align: center;
+  }
+  background-color: #fff;
+  border: 0;
+}
+
+.card-sub-header {
+  font-size: 17px;
+  line-height: 20px;
+  margin: 0 40px 10px;
+  text-align: center;
+  color: #999;
+  font-weight: 600;
+}
+
+#already-acc {
+  p {
+    margin-bottom: 0;
+  }
+  margin-top: 15px;
 }
