--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,34 @@
-<h2>Sign up</h2>
+<div class="registration-bg">
+  <div class="container">
+    <div class="row-one row justify-content-md-center align-items-center">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="log-in card">
+          <div class="card-header">
+            <h1>instapost</h1>
+          </div>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+            <h2 class="card-sub-header">Sign up to see photos from your friends.</h2>
+            <div class="card-block">
+                <%= f.input :email, required: true, autofocus: true, label: false, placeholder: 'Email', input_html: { class: 'input-lg' } %>
+                <%= f.input :user_name, required: true, label: false, placeholder: 'User Name', input_html: {  class: 'input-lg' } %>
+                <%= f.input :password, required: true, label: false, placeholder: 'Password', input_html: { class: 'input-lg' } %>
+                <%= f.input :password_confirmation, required: true, label: false, placeholder: 'Confirm Password', input_html: { class: 'input-lg' } %>
+                <%= f.button :submit, "Sign up", class: 'btn-lg btn-info btn-block' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :user_name, required: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <div id="already-acc" class="row justify-content-md-center align-items-center">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="log-in card">
+          <div class="card-block">
+            <p>Already have an account?<%= render "devise/shared/links" %></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
