Provide sign up title and some padding bottom

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -157,6 +157,7 @@ nav {
 .registration-bg {
   min-height: 100%;
   padding-top: 4em;
+  padding-bottom: 2em;
   background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
 }
 
