--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= provide(:title, "Sign up") %>
 <div class="registration-bg">
   <div class="container">
     <div class="row-one row justify-content-md-center align-items-center">
