--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
     <div class="container-fluid">
       <%= render 'layouts/flash_message' %>
       <%= yield %>
+      <footer>
+        <p>
+          Made with <%= fa_icon("heart-o") %> by <%= link_to 'Edwin', 'wwww.edwincarbajal'%>
+        </p>
+      </footer>
       <%#= debug(params) if Rails.env.development? %>
     </div>
   </body>
