Paginate posts on the index page

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,8 @@
 <div id="comment">
   <div class="user-name">
-    <%= comment.user.user_name %>
+    <% if comment.user %>
+      <%= comment.user.user_name %>
+    <% end %>
   </div>
   <div class="comment-content">
     <%= comment.content %>
