--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
     <%= render 'posts/error_messages' %>
     <div class="form-group">
       <label for="exampleInputFile">File input</label>
-      <%= f.input  :image, label: false, input_html: { class: "form-control-file" } %>
+      <%= f.input  :image, label: false, input_html: { class: "form-control-file"} %>
     </div>
     <div class="form-group text-center">
      <%= f.input  :caption %>
@@ -13,3 +13,32 @@
     </div>
   <% end %>
 </div>
+
+<!-- <div class="posts-wrapper">
+  <div class="post">
+    <div class="post-body">
+      <div class="image-wrap">
+        <%= image_tag("", id: 'image-preview', class: 'image-responsive') %>
+      </div>
+        <%= simple_form_for @post, multipart: true do |f| %>
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <%= f.error_notification %>
+            </div>
+          </div>
+          <div class="container-fluid">
+            <div class="form-group text-center">
+              <h4>Upload an image (this is required) :</h4>
+              <%= f.input :image, label: false, input_html: { onChange: 'loadFile(event)' } %>
+            </div>
+            <div class="form-group text-center">
+              <%= f.input :caption, label: false, placeholder: 'Add your caption' %>
+            </div>
+            <div class="form-group text-center">
+              <%= f.button :submit, class: 'btn-success btn-block' %>
+            </div>
+          </div>
+        <% end %>
+    </div>
+  </div>
+</div> -->
