--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,7 +156,7 @@ nav {
   color: #4090DB;
   height: 120px;
   width: 120px;
-  margin: 60px auto 40px;
+  margin: 60px auto 100px;
   position: relative;
   display: table;
   border: 2px solid #4090DB;
@@ -272,6 +272,9 @@ footer {
   p {
     margin-bottom: 0;
     text-align: center;
-    color: #fff;
+    color: #000;
+  .heart {
+    color: red;
+  }
   }
 }
