Create profile controller and views. Add avatar and bio field to user model migration

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
     <div class="post-head">
       <div class="thumb-img"></div>
       <div class="user-name">
-        <%= p.user.user_name %>
+        <%= link_to p.user.user_name, profile_path(p.user.user_name) %>
       </div>
       <div class="time-ago">
         <%= "#{time_ago_in_words(p.created_at)} ago" %>
