Finish user profile

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="form-wrapper">
+<!-- <div class="form-wrapper">
   <%= simple_form_for @post, multipart: true, html: { class: "form-horizontal" } do |f| %>
     <%= render 'posts/error_messages' %>
     <div class="form-group">
@@ -12,9 +12,9 @@
      <%= f.submit :submit, class: "btn btn-success" %>
     </div>
   <% end %>
-</div>
+</div> -->
 
-<!-- <div class="posts-wrapper">
+<div class="posts-wrapper">
   <div class="post">
     <div class="post-body">
       <div class="image-wrap">
@@ -41,4 +41,4 @@
         <% end %>
     </div>
   </div>
-</div> -->
+</div>
