Add veriable to users

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -322,6 +322,12 @@ footer {
   display: inline;
 }
 
+.user-verified {
+  color: #5692FF;
+  // color: #4F7EEC;
+  // color: #009FF5;
+}
+
 .edit-button {
   border-color: #818488;
   color: #818488;
