--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <div id="comment">
   <div class="user-name">
     <% if comment.user %>
-      <%= comment.user.user_name %>
+      <%= link_to comment.user.user_name, profile_path(comment.user.user_name) %>
     <% end %>
   </div>
   <div class="comment-content">
