--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -20,7 +20,7 @@
       <div class="caption">
         <div class="caption-content">
           <div class="user-name">
-            <%= p.user.user_name %>
+            <%= link_to p.user.user_name, profile_path(p.user.user_name) %>
           </div>
           <%= p.caption %>
         </div>
