--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -34,14 +34,11 @@
             <% end %>
           </div>
           <%= render p.comments.last(4), p: p %>
-          <!-- <% p.comments.each do |comment| %>
-            <%#= render 'comments/comment', comment: comment, p: p %>
-          <% end %> -->
         <% end %>
       </div>
       <div class="comment-like-form row">
         <div class="like-button col-sm-1">
-          <%= link_to fa_icon("#{liked_post(p)}", id: "like_#{p.id}"), like_post_path(p.id), remote: true %>
+          <%= link_to fa_icon("#{liked_post(p)}", id: "like_#{p.id}"), like_post_path(p), remote: true %>
         </div>
         <%= render 'comments/form', p: p %>
       </div>
