Fix pagination button display

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <div id="posts" class="posts-wrapper row">
   <%= render 'posts/posts'%>
 </div>
-<div id="paginator" class="text-center">
-  <%= link_to_next_page @posts, 'View More', remote: true, id: 'load_more' %>
-</div>
+<% if pagination_count? %>
+  <div id="paginator" class="text-center">
+    <%= link_to_next_page @posts, 'View More', remote: true, id: 'load_more' %>
+  </div>
+<% end %>
