--- a/app/views/notifications/_notification_dropdown.html.erb
+++ b/app/views/notifications/_notification_dropdown.html.erb
@@ -1,4 +1,6 @@
-<span id="notification_count"><%= current_user.notifications.count %></span>
+<% unless notification_counter(current_user) %>
+  <span id="notification_count"><%= current_user.notifications.where(read: false).count %></span>
+<% end %>
 <%= link_to fa_icon('flag-o'), '#', class: 'nav-link', id: 'notificationLink' %>
 <!-- Notification Popup Code... -->
 <div id="notificationContainer">
@@ -6,4 +8,3 @@
   <div id="notificationsBody" class="notifications">
     <ul>
       <%= render current_user.notifications.order('created_at DESC') %>
-      
