Add index page for notifications

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
               <%= render 'notifications/notification_dropdown' %>
                   </ul>
                 </div>
-                <div id="notificationFooter"><a href="#">See All</a></div>
+                <div id="notificationFooter"><%= link_to 'View All', notifications_path %></div>
               </div>
             </li>
             <li class="nav-item">
