--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,11 +55,13 @@ position:relative
 background-color: #fff;
 border: 1px solid rgba(100, 100, 100, .4);
 -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
-overflow: visible;
+overflow-x: hidden;
+overflow-y: scroll;
 position: absolute;
 top: 50px;
 margin-left: -185px;
 width: 400px;
+height: 500px;
 z-index: 1;
 display: none; // Enable this after jquery implementation
 }
@@ -78,6 +80,8 @@ margin-left: 188px;
 }
 #notificationTitle
 {
+position: sticky;
+top: 0;
 font-weight: bold;
 padding: 8px;
 font-size: 13px;
@@ -90,10 +94,12 @@ border-bottom: 1px solid #dddddd;
 #notificationsBody
 {
 padding: 33px 0px 0px 0px !important;
-min-height:300px;
+min-height:427px;
 }
 #notificationFooter
 {
+position: sticky;
+bottom: 0;
 background-color: #e9eaed;
 text-align: center;
 font-weight: bold;
@@ -127,6 +133,17 @@ border-radius: 9px;
 position: absolute;
 margin-top: -3px;
 font-size: 11px;
+}
+
+.notification-index-list {
+  margin-top: 5em;
+  margin-bottom: 5em;
+  list-style: none;
+  li {
+    margin-top: 1em;
+    background-color: white;
+    padding: 1em;
+  }
 }
 
 /* posts feed */
