--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,6 +16,8 @@
         <span>
           <% if @user === current_user %>
             <%= link_to 'Edit Profile', edit_profile_path(@user.user_name), class: 'btn edit-button' %>
+          <% else %>
+            <%= link_to 'Following', unfollow_user_path, remote: true, class: 'btn unfollow-button', id: 'unfollow-button', method: :post %>
           <% end %>
         </span>
         <p class="profile-bio">
