--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,9 @@
               <%= link_to 'New Post', new_post_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
+              <%= link_to 'Explore', browse_posts_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
               <%= link_to 'Profile', profile_path(current_user.user_name), class: 'nav-link' %>
             </li>
             <li class="nav-item">
