--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -26,7 +26,9 @@
           <%= @user.bio %>
         </p>
         <div class="user-statistics">
-          <p><%= pluralize(@user.posts.count, 'post') %></p>
+          <p class="d-inline-block"><%= pluralize(@user.posts.count, 'post') %></p>
+          <p class="d-inline-block"><%= pluralize(@user.followers.count, 'follower') %></p>
+          <p class="d-inline-block"><%= "#{@user.following.count} following" %></p>
         </div>
       </div>
     </div>
