--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@
       <%#= render 'posts/post_settings', p: p %>
     </div>
     <div class="image center-block">
-      <%= link_to(image_tag( p.image.url(:medium), class: "img-responsive" ), post_path(p) )%>
+      <%= link_to(image_tag( p.image.url(:medium), class: "img-fluid" ), post_path(p) )%>
     </div>
     <div class="post-bottom">
       <%= render 'posts/likes', post: p %>
