--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="posts-wrapper">
-  <div class="row profile-header">
+  <div class="row profile-header no-gutters">
     <div class="col-md-6">
       <div class="img-circle">
         <%= profile_avatar_select(@user) %>
