--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           Made with <span class="heart"><%= fa_icon("heart-o") %></span> by <%= link_to 'Edwin', 'http://edwincarbajal.com'%>
         </p>
       </footer>
-      <%= debug(params) if Rails.env.development? %>
+      <%#= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
