--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,41 +1,28 @@
-<!-- <div class="form-wrapper">
-  <%= simple_form_for @post, multipart: true, html: { class: "form-horizontal" } do |f| %>
-    <%= render 'posts/error_messages' %>
-    <div class="form-group">
-      <label for="exampleInputFile">File input</label>
-      <%= f.input  :image, label: false, input_html: { class: "form-control-file"} %>
-    </div>
-    <div class="form-group text-center">
-     <%= f.input  :caption %>
-    </div>
-    <div class="form-group text-center">
-     <%= f.submit :submit, class: "btn btn-success" %>
-    </div>
-  <% end %>
-</div> -->
-
 <div class="posts-wrapper">
   <div class="post">
     <div class="post-body">
-      <div class="image-wrap">
-        <%= image_tag("", id: 'image-preview', class: 'image-responsive') %>
-      </div>
         <%= simple_form_for @post, multipart: true do |f| %>
-          <div class="row">
+          <div class="row no-gutters">
             <div class="col-md-12 text-center">
               <%= f.error_notification %>
             </div>
           </div>
           <div class="container-fluid">
-            <div class="form-group text-center">
-              <h4>Upload an image (this is required) :</h4>
-              <%= f.input :image, label: false, input_html: { onChange: 'loadFile(event)' } %>
+            <div id="upload-form-header" class="text-center">
+              <p class="h5 text-uppercase">upload an image</p>
             </div>
-            <div class="form-group text-center">
+            <div class="image-wrap">
+              <%#= image_tag("", id: 'image-preview', class: 'image-fluid') %>
+              <%= form_image_select(@post) %>
+            </div>
+            <div id="upload-button-wrapper" class="form-group text-center upload-form-bottom-spacer">
+              <%= f.input :image, label: false, input_html: { onChange: 'postLoadFile(event)' } %>
+            </div>
+            <div class="form-group text-center upload-form-bottom-spacer">
               <%= f.input :caption, label: false, placeholder: 'Add your caption' %>
             </div>
-            <div class="form-group text-center">
-              <%= f.button :submit, class: 'btn-success btn-block' %>
+            <div class="form-group text-center upload-form-bottom-spacer">
+              <%= f.button :submit, class: 'btn-lg btn-info btn-block' %>
             </div>
           </div>
         <% end %>
