Add page titles and remove file duplicates

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,4 @@
+<%= provide(:title, "#{@user.user_name}") %>
 <div class="posts-wrapper">
   <div class="row profile-header no-gutters">
     <div id="user_avatar_wrapper" class="col-md-6">
