Remove back button from post show page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
 <div class="posts-wrapper row">
-  <%= link_to 'Back', root_path %>
+  <%#= link_to 'Back', root_path %>
   <%= render 'posts/post', p: @post %>
 </div>
