Style edit profile page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -494,6 +494,15 @@ font-size: 11px;
   padding: 0 20px;
 }
 
+/* edit profile */
+#edit-profile-header-wrapper {
+  padding-top: 50px;
+}
+
+.edit-profile-upload {
+  padding: 16px 0 !important;
+}
+
 /* footer */
 
 footer {
