--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -3,24 +3,25 @@
     <div class="post-body">
       <div class="image-wrap">
         <%= form_for @user, url: {action: 'update'}, multipart: true do |f| %>
-          <div class="row">
+          <div id="edit-profile-header-wrapper" class="row no-gutters">
             <div class="col-md-12">
               <div class="form-group text-center">
-                <h4>Change your profile image:</h4>
+                <p class="h5 text-uppercase">change your profile image</p>
                 <div class="img-circle">
                   <%= profile_avatar_select(@user) %>
+                  <div id="" class="form-group text-center">
+                    <%=  f.file_field :avatar, onChange: 'loadFile(event)', class: 'edit-profile-upload' %>
+                  </div>
                 </div>
-                <%=  f.file_field :avatar, onChange: 'loadFile(event)' %>
               </div>
             </div>
           </div>
-
-          <div class="row">
+          <div class="row no-gutters">
             <div class="col-sm-12">
-              <div class="form-group text-center">
-                <h4>Update your bio:</h4>
-                <%= f.text_area :bio, label: false, rows: 4, id: "edit-profile-bio" %>
+              <div id=""class="form-group text-center">
+                <p class="h5 text-uppercase">update your bio</p>
               </div>
+              <%= f.text_area :bio, label: false, rows: 4, id: "edit-profile-bio" %>
             </div>
           </div>
 
