--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,7 +6,7 @@
           <div id="edit-profile-header-wrapper" class="row no-gutters">
             <div class="col-md-12">
               <div class="form-group text-center">
-                <p class="h5 text-uppercase">change your profile image</p>
+                <p class="h5 text-uppercase">update profile image</p>
                 <div class="img-circle">
                   <%= profile_avatar_select(@user) %>
                   <div id="" class="form-group text-center">
@@ -19,7 +19,7 @@
           <div class="row no-gutters">
             <div class="col-sm-12">
               <div id=""class="form-group text-center">
-                <p class="h5 text-uppercase">update your bio</p>
+                <p class="h5 text-uppercase">update bio</p>
               </div>
               <%= f.text_area :bio, label: false, rows: 4, id: "edit-profile-bio" %>
             </div>
